--- a/sudoku.css
+++ b/sudoku.css
@@ -121,7 +121,8 @@ hr {
     border-right: 2px solid tan;
 }
 
-#game-controls {
+.game-controls,
+.difficulty-container {
     width: 600px;
     margin: 0 auto;
     display: flex;
@@ -130,7 +131,12 @@ hr {
     align-items: center; /*center vertically*/
 }
 
-.control-btn {
+.game-controls {
+    padding: 12px 0;
+}
+
+.control-btn,
+.difficulty-btn {
     width: 120px;
     height: 48px;
     color: antiquewhite;
@@ -138,7 +144,7 @@ hr {
     outline: 4px solid antiquewhite;
     filter: drop-shadow(1px 8px 2px #444);
     border-radius: 45%;
-    margin: 40px 10px 40px 10px;
+    margin: 10px 10px 10px 10px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 22px;
@@ -148,7 +154,8 @@ hr {
     align-items: center; /*center vertically*/
 }
 
-.control-btn:hover {
+.control-btn:hover,
+.difficulty-btn:hover {
     filter: drop-shadow(1px 3px 2px #444);
     transform: translate(0, 4px);
 }
